--- a/lists.html
+++ b/lists.html
@@ -14,6 +14,12 @@
 			<li>mech</li>
 			<li>civil</li>
 		</ul>
+		<dl>
+			<dt>HTML</dt>
+			<dd>Hyperlink markup language</dd>
+			<dt>css</dt>
+			<dd>cascading style sheet</dd>
+		</dl>
 	</body>
 </html>
 	
